--- a/TheAwesomeTextAdventure.Infrastructure/TheAwesomeTextAdventure.Infrastructure.csproj
+++ b/TheAwesomeTextAdventure.Infrastructure/TheAwesomeTextAdventure.Infrastructure.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\TheAwesomeTextAdventure.Domain\TheAwesomeTextAdventure.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+  </ItemGroup>
+
 </Project>
