Adicionando processador de salas. Ajustando a estrutura das classes em seus respectivos folders Adicionando testes para novas alterações

--- a/TheAwesomeTextAdventure/TheAwesomeTextAdventure.csproj
+++ b/TheAwesomeTextAdventure/TheAwesomeTextAdventure.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\TheAwesomeTextAdventure.Infrastructure\TheAwesomeTextAdventure.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Handlers\Abstractions\" />
+  </ItemGroup>
+
 </Project>
